// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppointmentModal AppointmentModal should render correctly 1`] = `
<Modal
  afterClose={[MockFunction]}
  title=" 65 Lindsey Close, Ref: BED1600597"
  visible={true}
>
  <Tile
    heading="Time"
    hightlight={false}
    icon={
      <FaClock
        className="icon-list-icon"
      />
    }
  >
    18 Dec 2016 04:30 PM - 05:30 PM
    , 
    65
     
    Lindsey Close
  </Tile>
  <Tile
    heading="Chase MacLean"
    hightlight={false}
    icon={
      <FaMale
        className="media-icon"
      />
    }
    key="BED1600597"
  >
    <div>
       
      65
       
      Lindsey Close
       
      Great Denham
       
      Bedford
       
      Bedfordshire
       
      MK40 4GT
       
    </div>
    <div
      className="my-5"
    >
      <IconList
        items={
          Array [
            Object {
              "icon": <TiMail
                className="icon-list-icon"
              />,
              "text": <a
                href="mailto:chase.maclean@reapitestates.net"
              >
                chase.maclean@reapitestates.net
              </a>,
            },
          ]
        }
      />
    </div>
  </Tile>
  <Tile
    heading="Chase MacLean"
    hightlight={false}
    icon={
      <FaMale
        className="media-icon"
      />
    }
    key="BED1600597"
  >
    <div>
       
      65
       
      Lindsey Close
       
      Great Denham
       
      Bedford
       
      Bedfordshire
       
      MK40 4GT
       
    </div>
    <div
      className="my-5"
    >
      <IconList
        items={
          Array [
            Object {
              "icon": <TiMail
                className="icon-list-icon"
              />,
              "text": <a
                href="mailto:chase.maclean@reapitestates.net"
              >
                chase.maclean@reapitestates.net
              </a>,
            },
          ]
        }
      />
    </div>
  </Tile>
  <Tile
    heading="Arrangements"
    hightlight={false}
    icon={
      <FaHandshake
        className="media-icon"
      />
    }
  >
    Switch lights on in living room
  </Tile>
</Modal>
`;

exports[`AppointmentModal AppointmentModal should render correctly when loading 1`] = `
<Modal
  afterClose={[MockFunction]}
  title=" 65 Lindsey Close, Ref: BED1600597"
  visible={true}
>
  <Loader />
</Modal>
`;

exports[`AppointmentModal renderAddress should matchSnapshot 1`] = `
<div>
  <div>
     
    65
     
    Lindsey Close
     
    Great Denham
     
    Bedford
     
    Bedfordshire
     
    MK40 4GT
     
  </div>
</div>
`;

exports[`AppointmentModal renderAttendees should matchSnapshot 1`] = `
Array [
  <Tile
    heading="Chase MacLean"
    hightlight={false}
    icon={
      <FaMale
        className="media-icon"
      />
    }
  >
    <div
      className="my-5"
    >
      <IconList
        items={
          Array [
            Object {
              "icon": <TiMail
                className="icon-list-icon"
              />,
              "text": <a
                href="mailto:chase.maclean@reapitestates.net"
              >
                chase.maclean@reapitestates.net
              </a>,
            },
          ]
        }
      />
    </div>
  </Tile>,
  <Tile
    heading="Chase MacLean"
    hightlight={false}
    icon={
      <FaMale
        className="media-icon"
      />
    }
  >
    <div
      className="my-5"
    >
      <IconList
        items={
          Array [
            Object {
              "icon": <TiMail
                className="icon-list-icon"
              />,
              "text": <a
                href="mailto:chase.maclean@reapitestates.net"
              >
                chase.maclean@reapitestates.net
              </a>,
            },
          ]
        }
      />
    </div>
  </Tile>,
]
`;

exports[`AppointmentModal renderCheckMark should match snapshot 1`] = `
<div>
  <TiTick />
</div>
`;

exports[`AppointmentModal renderCommunicationDetail should match snapshot 1`] = `
<div>
  <IconList
    items={
      Array [
        Object {
          "icon": <TiMail
            className="icon-list-icon"
          />,
          "text": <a
            href="mailto:chase.maclean@reapitestates.net"
          >
            chase.maclean@reapitestates.net
          </a>,
        },
      ]
    }
  />
</div>
`;

exports[`AppointmentModal renderCommunicationType should match snapshot 1`] = `
<div>
  <TiMail
    className="icon-list-icon"
  />
</div>
`;

exports[`AppointmentModal renderDirections should matchSnapshot 1`] = `
<div>
  <Tile
    heading="Directions"
    hightlight={false}
    icon={
      <FaDirections
        className="media-icon"
      />
    }
  >
    123
  </Tile>
</div>
`;

exports[`AppointmentModal renderNotes should matchSnapshot 1`] = `
<div>
  <Tile
    heading="Notes"
    hightlight={false}
    icon={
      <FaStickyNote
        className="media-icon"
      />
    }
  >
    123
  </Tile>
</div>
`;
